# Semantic-Movie-Show-Discovery-App

./: .env.example  .gitignore  .lefthook.yml  README.md  compose.build.yml  compose.cloud.dev.yml  compose.coolify.yaml  compose.dev.yml  compose.yaml  compose.yml  sonar-project.properties
.github/workflows/: catalog-api.yml  catalog-collector.yml  catalog-ingester.yml  frontend.yml  sonarqube.yml
catalog-api/: .dockerignore  .env.example  .gitignore  .lefthook.yml  Dockerfile  biome.json  drizzle.config.ts  package.json  tsconfig.json
catalog-api/catalog-api-requests/: bruno.json  collection.bru
catalog-api/drizzle/: relations.ts  schema.ts
catalog-api/src/: clients.ts  index.ts
catalog-collector/: .dockerignore  .env.example  .gitignoore  .gitignore  .golangci.yml  .lefthook.yml  Dockerfile  README.md  db.go  db_test.go  env.go  errors.go  fix_test.py  go.mod  go.sum  log.go  main.go  patch_test.py  pyproject.toml  tmdb.go  tracing.go
catalog-collector/src/: data_dictionary.py  dataset.py  db.py  env.py  logger.py  main.py  movie.py
catalog-collector/src/models/: company.py  country.py  genre.py  keyword.py  language.py  links.py  movie.py  named_entity.py
catalog-collector/src/tests/: test_dataset.py  test_db.py
catalog-collector/src/tests/test_data/: short.csv
catalog-ingester/: .dockerignore  .env.example  .gitignore  .golangci.yml  .lefthook.yml  Dockerfile  README.md  chunk.go  chunk_test.go  db.go  embeddings.go  entities.go  env.go  go.mod  go.sum  ingest.go  log.go  main.go  movie.go  movie_test.go  search.go  sparse.go  testcoverage.yml  tracing.go  utils.go  utils_test.go
config/qdrant/: dev_movies.es  movies.es
fluent-bit/: fluent-bit.yaml
frontend/: .lefthook.yml  DESIGN.md  Dockerfile  biome.json  next.config.ts  package.json  vite.config.ts
frontend/app/: globals.css  layout.tsx
frontend/lib/: providers.tsx  query-client.ts
frontend/src/: main.tsx
infra/: .env.example  .gitignore  compose.dev.yml
(+63 files in other folders)
