[project]
name = "catalog-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "attrs>=26.1.0",
    "kagglehub>=1.0.0",
    "opentelemetry-distro>=0.61b0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "polars>=1.39.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.7",
    "watchfiles>=1.1.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
